2011-02-16  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/remunge.c (process_creds): Fixed "overflow in implicit
	  constant conversion" warning for to.tv_sec (time_t) on OpenBSD 4.7
	  where a time_t is 4 bytes and LONG_MAX is 8 bytes.

	* src/libmunge/munge_ctx.3.in: Twiddled wording for MUNGE_ZIP_BZLIB.

2011-02-15  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/auth_recv.c: Added <sys/socket.h> include for getpeereid()
	  on OpenBSD.

2011-02-14  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/fd.c (fd_timed_read_n, fd_timed_write_n,
	  fd_timed_write_iov): Replaced ETIME with ETIMEDOUT.  POSIX.1 denotes
	  ETIME as an optional XSI STREAMS extension, now obsolescent.
	  Furthermore, it is not defined on BSD.
	* src/libcommon/fd.h: Updated comments wrt ETIMEDOUT.
	* src/libcommon/m_msg.c (m_msg_send, m_msg_recv):
	  Updated errno tests for ETIMEDOUT.

2011-02-10  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/job.c (_job_exec): Removed EMUNGE_CRED_UNAUTHORIZED errors
	  from the set whose origin IP address is logged.  Although the
	  credential has been successfully decoded, the client is not
	  authorized to know any of its contents.

	* src/munged/job.c (_job_exec): Added the origin IP address to the
	  logged error messages of select credential errors to aid in
	  troubleshooting.

2011-02-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_hash_create): Added comment wrt xgetpwnam()
	  buffer creation.

2011-02-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_update): Added guard to update of
	  do_group_stat flag for allowing a SIGHUP triggered during
	  _gids_hash_update() to reset the flag.

2011-02-03  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Fixed RPM spec file for openSUSE.  (issue 5)

2011-01-26  Chris Dunlap  <cdunlap@llnl.gov>

	* : Fixed a potential deadlock in munged that can occur if clients
	  block while sending data.  The wrappers for read() & write()